--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,79 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+body{
+    font-family: "Archivo", sans-serif;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
-
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+    text-decoration: none;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.inputStyle {
+    background-color: rgba(247, 247, 247, 1);
+    border: unset;
+    padding: 0.7rem;
+    border-radius: 5px !important;
+
+    &&::placeholder {
+        color: rgba(131, 145, 161, 1)
+    }
+
+    
+}
+.input-group.password{
+    margin-top: 1.9rem;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+.inputIcons {
+    color: rgb(122, 134, 148);
+    font-size: 21px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.input-group-text{
+    padding-right: unset;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.inputStyle:focus {
+background-color: rgba(247, 247, 247, 1) !important;
+box-shadow: unset !important;
+border: 1px solid rgb(206, 206, 206) !important;
+}
+.eyeIcon {
+    z-index: 999;
+}
+
+
+.authBtnStyle{
+    background-color: rgba(79, 70, 229, 1);
+    color: white
+    ;
+    padding-inline: 16rem;
+    padding-block: 13px;
+    font-weight: 500;
+    border-radius: 10px;
+    border: unset;
+}
+
+.authTitle {
+    margin-bottom: 2rem;
+}
+
+
+
+.authTitle h2 {
+    color: rgba(73, 73, 73, 1);
+    font-weight: 700;
+}
+.authTitle p{
+    color: rgba(73, 73, 73, 0.6);
+
+}
+
+.errorMessage {
+    margin: 5px;
+
+}
+.input-group-text {
+    padding-left: unset;
 }
