--- a/src/modules/AuthComponents/Components/ForgetPassword/forgetPassword.module.css
+++ b/src/modules/AuthComponents/Components/ForgetPassword/forgetPassword.module.css
@@ -17,3 +17,13 @@
       padding-inline: 3rem;
     }
   }
+
+  .formWrapper {
+
+
+    & ::placeholder {
+        padding-inline: 8px;
+        border-left: 1px solid rgba(131, 145, 161, 1);
+
+    }
+}
