--- a/src/modules/AuthComponents/Components/ForgetPassword/forgetPassword.module.css
+++ b/src/modules/AuthComponents/Components/ForgetPassword/forgetPassword.module.css
@@ -2,7 +2,15 @@
     padding-block: 7.5rem;
     padding-inline: 5.6rem; 
 }
-
+.loginBtn {
+  text-align: end;
+  margin-top: 1rem;
+}
+.loginBtn a {
+   color: rgba(99, 102, 241, 1);
+   font-weight: 500;
+  
+}
 .authBtn {
     margin-top: 6rem;
 }
