--- a/src/index.css
+++ b/src/index.css
@@ -144,7 +144,17 @@ border: 1px solid rgb(206, 206, 206) !important;
     }
     
     
+    .ps-sidebar-root .ps-sidebar-container  .sideArrow{
+      font-size: 2.5rem;
+    }
     
+    
+    .ps-sidebar-root.ps-collapsed .ps-sidebar-container   .sideArrow{
+        font-size: 1.5rem;
+        margin: unset !important;
+        top: 5px !important;
+      }
+      
     
     
     .navbarProfileImage {
@@ -217,7 +227,6 @@ border: 1px solid rgb(206, 206, 206) !important;
         background-color: rgba(248, 249, 251);
         border: 1px solid rgb(200, 200, 200);
         cursor: pointer;
-        width: 70%;
 
     }
     .totalDeactive {
@@ -227,6 +236,7 @@ border: 1px solid rgb(206, 206, 206) !important;
         padding-inline: 4rem;
         padding-block: 1.3rem;
         border-radius: 10px;
+        width: 25%;
         
         & h3,span {
             margin-bottom: 30px;
@@ -282,7 +292,9 @@ color: rgba(82, 82, 82, 1);
     .courtSlider {
         max-width: 750px;
     }
-
+.courtS {
+    width: 70%;
+}
     .table>tbody>tr:nth-child(odd)>td,
     .table>tbody>tr:nth-child(odd)>th {
       background-color: rgba(248, 249, 251, 1);
