update auth bg img

--- a/src/shareComponents/AuthLayout/Components/AuthLayout/authlayout.module.css
+++ b/src/shareComponents/AuthLayout/Components/AuthLayout/authlayout.module.css
@@ -1,5 +1,5 @@
 .authContainer {
-    background-image: url('../../../../assets/images/8f4f40a9b877e622bc304ab57e05796f.png');
+    background-image: url('../../../../assets/images/football-players-fighting-for-ball-2024-11-03-07-42-41-utc-min.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
