--- a/src/index.css
+++ b/src/index.css
@@ -577,7 +577,7 @@ border-radius: 50%;
 .nav .active{
   background-color: #4F46E5 !important;
   color: white !important;
-  padding-block: 20px;
+  padding-block: 10px;
   padding-inline: 47px;
   border-radius: 30px;
 }
@@ -754,4 +754,30 @@ border-radius: 50%;
   cursor: pointer;
   border-radius: 50%;
   margin: auto;
+}
+
+.policy{
+  font-size: 12px;
+  color: #737373;
+}
+
+.rounded-checkbox {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  vertical-align: middle;
+  border: 1px solid #DEE2E6;
+  appearance: none;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
+}
+.rounded-checkbox:checked {
+  clip-path: circle(50% at 50% 50%);
+  background-color: #4e46e585
+}
+.sx-react-calendar-wrapper {
+
+  height: 550px;
+  max-height: 90vh;
 }
